# cppcore

./: .clang-format  .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md
.devcontainer/: devcontainer.json
include/cpp/core/: switch.hpp
test/: test.cpp
